--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -63,14 +63,12 @@ jobs:
         run: |
           env
           export XDG_CONFIG_HOME=~/.config
-          # Don't care about outdated, broken linkages on CI.
-          # Otherwise, this might update node or php.
-          export HOMEBREW_NO_INSTALLED_DEPENDENTS_CHECK=1
-          export HOMEBREW_NO_INSTALL_CLEANUP=1
           # Make `infocmp` for nvim healthcheck succeed
           export TERM=dumb
           # Ignore potentially insecure directories on GitHub actions runner.
           export ZSH_DISABLE_COMPFIX=true
+          # Do not rate limit with public / untrusted access bucket
+          export NIX_CONFIG="access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}"
           cd .dotfiles/
           ./script/ci.sh
       - name: Rename versions report
